--- a/playground/package.json
+++ b/playground/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
     "typescript": "^5.5.3",
+    "unocss-preset-components": "workspace:*",
     "vite": "^5.4.0",
     "vue-tsc": "^2.0.29"
   }
